syntax = "proto3";

option go_package = "githuv.com/stojic19/XWS-TIM15/common/proto/job_offers";

package job_offers;

import "google/api/annotations.proto";

service JobOffersService{
  rpc GetAll(GetAllRequest) returns(GetAllResponse){
    option(google.api.http) = {
      get: "/job_offers"
    };
  }
  rpc Get(JobOfferId) returns(JobOffer){
    option(google.api.http) = {
      get: "/job_offers/{id}"
    };
  }
  rpc GetSubscribed(GetSubscribedRequest) returns(GetSubscribedResponse){
    option(google.api.http) = {
      get: "/job_offers/subscribed/{id}"
    };
  }
  rpc Create(NewJobOffer) returns(Response){
    option(google.api.http) = {
      post: "/job_offers"
      body: "*"
    };
  }
  rpc Update(UpdateJobOffer) returns(Response){
    option(google.api.http) = {
      put: "/job_offers"
      body: "*"
    };
  }
  rpc SubscribeJobOffer(SubscribeRequest) returns(Response){
    option(google.api.http) = {
      put: "/job_offers/follow"
      body: "*"
    };
  }
  rpc UnsubscribeJobOffer(UnsubscribeRequest) returns(Response){
    option(google.api.http) = {
      put: "/job_offers/unfollow"
      body: "*"
    };
  }
}


message GetAllRequest{

}

message GetAllResponse{
  repeated JobOffer jobOffers = 1;
}

message JobOffer{
  string id = 1;
  string position = 2;
  string description = 3;
  string requirements = 4;
  bool isActive = 5;
  repeated User subscribers = 6;
}

message NewJobOffer{
  string position = 1;
  string description = 2;
  string requirements = 3;
}

message UpdateJobOffer{
  string id = 1;
  string position = 2;
  string description = 3;
  string requirements = 4;
  bool IsActive = 5;
}

message JobOfferId{
  string id = 1;
}

message GetSubscribedRequest{
  string id = 1;
}

message GetSubscribedResponse{
  repeated JobOffer jobOffers = 1;
}

message SubscribeRequest{
  string id = 1;
  string jobOfferId = 2;
}

message UnsubscribeRequest{
  string id = 1;
  string jobOfferId = 2;
}

message Response{
   int32 code = 1;
   string message = 2;
}

message User{
  string id = 1;
}

//protoc -I ./proto --go_out=./proto --go_opt=paths=source_relative --go-grpc_out=./proto --go-grpc_opt=paths=source_relative --grpc-gateway_out=allow_delete_body=true:./proto --grpc-gateway_opt=paths=source_relative ./proto/job_offers/job_offers.proto